--- a/src/index.css
+++ b/src/index.css
@@ -22,5 +22,6 @@ input:focus{
 }
 
 button{
-    height: 45px !important;    
+    height: 45px !important; 
+    box-shadow: none !important;   
 }
